add zoznam pacientov
